# qrPickuper

./: .gitignore  Procfile  README.md  main.py  pyproject.toml
