[tool.poetry]
name = "qrpickuper"
version = "0.1.0"
description = ""
authors = ["Margo <slava1kvartovkin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.23"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
